--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Leon Templete 1</title>
+    <title>Leon Templete</title>
     <!-- main CSS File -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- Render All Elements normally -->
@@ -19,8 +19,117 @@
     <link rel="stylesheet" href="CSS/all.min.css" />
   </head>
   <body>
-    <div class="parent">
-      <div class="container">Test Text</div>
+    <!-- Start Header Section -->
+    <div class="header">
+      <div class="container">
+        <img src="Images/logo.png" alt="Logo is Missing" class="logo" />
+        <div class="links">
+          <span class="icon">
+            <span></span>
+            <span></span>
+            <span></span>
+          </span>
+          <ul>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- Start Landing Section -->
+    <div class="landing">
+      <div class="intro-text">
+        <h1>Hello There</h1>
+        <p>We Are Leon - Super Creative & Minimal Agency Web Template</p>
+      </div>
+    </div>
+    <!-- Start features Section -->
+    <div class="features">
+      <div class="container">
+        <div class="feat">
+          <i class="fa-solid fa-wand-magic-sparkles"></i>
+          <h3>Tell Us Your Idea</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae
+            similique reiciendis fuga voluptatum sit cupiditate, laborum
+          </p>
+        </div>
+        <div class="feat">
+          <i class="fa-regular fa-gem"></i>
+          <h3>Tell Us Your Idea</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae
+            similique reiciendis fuga voluptatum sit cupiditate, laborum
+          </p>
+        </div>
+        <div class="feat">
+          <i class="fa-solid fa-earth-americas"></i>
+          <h3>Tell Us Your Idea</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae
+            similique reiciendis fuga voluptatum sit cupiditate, laborum
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- Start Services Section -->
+    <div class="services">
+      <div class="container">
+        <h3>Don't be busy, be productive</h3>
+        <div class="services-content">
+          <div class="col">
+            <div class="srv">
+              <i class="fa-solid fa-palette"></i>
+              <div class="text">
+                <h3>Graphic Design</h3>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Provident distinctio accusantium adipisci perferendis, sit
+                  consequuntur sint
+                </p>
+              </div>
+            </div>
+            <div class="srv">
+              <i class="fa-solid fa-vector-square"></i>
+              <div class="text">
+                <h3>Web Design</h3>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Provident distinctio accusantium adipisci perferendis, sit
+                  consequuntur sint
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="srv">
+              <i class="fa-solid fa-gem"></i>
+              <div class="text">
+                <h3>UI & UX</h3>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Provident distinctio accusantium adipisci perferendis, sit
+                  consequuntur sint
+                </p>
+              </div>
+            </div>
+            <div class="srv">
+              <i class="fa-solid fa-pen-ruler"></i>
+              <div class="text">
+                <h3>Web Development</h3>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Provident distinctio accusantium adipisci perferendis, sit
+                  consequuntur sint
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="shape"></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
