--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
     <!-- Start Services Section -->
     <div class="services">
       <div class="container">
-        <h3>Don't be busy, be productive</h3>
+        <h2 class="special-heading">Services</h2>
+        <p>Don't be busy, be productive</p>
         <div class="services-content">
           <div class="col">
             <div class="srv">
@@ -129,6 +130,91 @@
           </div>
           <div class="shape"></div>
         </div>
+      </div>
+    </div>
+    <!-- Start Portfolio Section -->
+    <div class="portfolio">
+      <div class="container">
+        <h2 class="special-heading">Portfolio</h2>
+        <p>If you do it right, it will last forever.</p>
+        <div class="portfolio-content">
+          <div class="port">
+            <img src="Images/portfolio-1.jpg" alt="" />
+            <h3>Project Here</h3>
+            <p>
+              My creative ability is very difficult to measure because it can
+              manifest in so many surprising and.
+            </p>
+          </div>
+          <div class="port">
+            <img src="Images/portfolio-2.jpg" alt="" />
+            <h3>Project Here</h3>
+            <p>
+              My creative ability is very difficult to measure because it can
+              manifest in so many surprising and.
+            </p>
+          </div>
+          <div class="port">
+            <img src="Images/portfolio-3.jpg" alt="" />
+            <h3>Project Here</h3>
+            <p>
+              My creative ability is very difficult to measure because it can
+              manifest in so many surprising and.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Start About Section -->
+    <div class="about">
+      <div class="container">
+        <h2 class="special-heading">About</h2>
+        <p>Less is more work</p>
+        <div class="about-content">
+          <div class="image">
+            <img src="Images/about.jpg" alt="" />
+          </div>
+          <div class="text">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ea
+              maxime commodi hic modi. Tempora officiis in alias tenetur eaque,
+              nemo ipsa, sunt atque adipisci reprehenderit ea eveniet earum
+              facere.
+            </p>
+            <hr />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+              perferendis ipsam molestias numquam deleniti consectetur, ea,
+              ipsum blanditiis commodi quisquam sunt modi esse eius dolorum
+              aliquam vero aliquid quaerat assumenda?
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Start Contact Section -->
+    <div class="contact">
+      <div class="container">
+        <h2 class="special-heading">Contact</h2>
+        <p>We are born to create</p>
+        <div class="info">
+          <p>Feel free to drop us a line at:</p>
+          <a href="mailto:leonagency@mai.com">leonagency@mail.com</a>
+          <div class="social">
+            Find Us On Social Networks
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Start Copyright Section -->
+    <div class="copy">
+      <div class="container">
+        <i class="fa-regular fa-copyright"></i> 2021
+        <span>Leon</span>
+        All Right Reserved
       </div>
     </div>
   </body>
