--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
     </div>
     <!-- Start Services Section -->
-    <div class="services">
+    <div class="services" id="services">
       <div class="container">
         <h2 class="special-heading">Services</h2>
         <p>Don't be busy, be productive</p>
@@ -133,7 +133,7 @@
       </div>
     </div>
     <!-- Start Portfolio Section -->
-    <div class="portfolio">
+    <div class="portfolio" id="portfolio">
       <div class="container">
         <h2 class="special-heading">Portfolio</h2>
         <p>If you do it right, it will last forever.</p>
@@ -166,7 +166,7 @@
       </div>
     </div>
     <!-- Start About Section -->
-    <div class="about">
+    <div class="about" id="about">
       <div class="container">
         <h2 class="special-heading">About</h2>
         <p>Less is more work</p>
@@ -193,7 +193,7 @@
       </div>
     </div>
     <!-- Start Contact Section -->
-    <div class="contact">
+    <div class="contact" id="contact">
       <div class="container">
         <h2 class="special-heading">Contact</h2>
         <p>We are born to create</p>
@@ -210,7 +210,7 @@
       </div>
     </div>
     <!-- Start Copyright Section -->
-    <div class="copy">
+    <div class="footer">
       <div class="container">
         <i class="fa-regular fa-copyright"></i> 2021
         <span>Leon</span>
