--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
     </div>
     <!-- Start Landing Section -->
     <div class="landing">
-      <div class="intro-text">
-        <h1>Hello There</h1>
-        <p>We Are Leon - Super Creative & Minimal Agency Web Template</p>
+      <div class="container">
+        <div class="intro-text">
+          <h1>Hello There</h1>
+          <p>We Are Leon - Super Creative & Minimal Agency Web Template</p>
+        </div>
       </div>
     </div>
     <!-- Start features Section -->
